--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "kanban app",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node app.js",
+    "dev":"NODE_ENV=development nodemon app.js"
   },
   "author": "Samuel-Girsang",
   "license": "ISC",
